# cpp-result

./: CMakeLists.txt
inc/util/: result.hpp
src/: CMakeLists.txt
src/inc/fb/: result.hpp
test/: CMakeLists.txt  error.cpp  main.cpp  result.cpp
test/inc/: test.hpp
